packages/libs/error-stack/tests/snapshots/test_debug__sources_nested@pretty-print.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---
context A
├╴ tests/common/snapshots.rs:206:10
├╴ 2
├╴ 1
│
╰┬▶ context A
 │  ├╴ tests/common/snapshots.rs:200:10
 │  ├╴ 4
 │  ├╴ 3
 │  │
 │  ╰─▶ root error
 │      ├╴ tests/common/mod.rs:4:5
 │      ╰╴ 6
 │
 ╰▶ context A
    ├╴ tests/common/snapshots.rs:195:10
    ├╴ 5
    ├╴ 3
    │
    ├─▶ context A
    │   ├╴ tests/common/snapshots.rs:193:10
    │   ╰╴ 7
    │
    ╰┬▶ context A
     │  ├╴ tests/common/snapshots.rs:184:34
     │  ├╴ 9
     │  ├╴ 8
     │  │
     │  ╰─▶ root error
     │      ╰╴ tests/common/mod.rs:4:5
     │
     ├▶ context A
     │  ├╴ tests/common/snapshots.rs:178:10
     │  ├╴ 13
     │  ├╴ 10
     │  ├╴ 16
     │  ├╴ 9
     │  ├╴ 8
     │  │
     │  ╰─▶ root error
     │      ╰╴ tests/common/mod.rs:4:5
     │
     ├▶ context A
     │  ├╴ tests/common/snapshots.rs:164:10
     │  ├╴ 15
     │  ├╴ 14
     │  ├╴ 10
     │  ├╴ 16
     │  ├╴ 9
     │  ├╴ 8
     │  │
     │  ╰─▶ root error
     │      ╰╴ tests/common/mod.rs:4:5
     │
     ├▶ context A
     │  ├╴ tests/common/snapshots.rs:174:10
     │  ├╴ 11
     │  ├╴ 9
     │  ├╴ 8
     │  │
     │  ╰─▶ root error
     │      ╰╴ tests/common/mod.rs:4:5
     │
     ╰▶ context A
        ├╴ tests/common/snapshots.rs:170:10
        ├╴ 12
        ├╴ 9
        ├╴ 8
        │
        ├─▶ context A
        │   ╰╴ tests/common/snapshots.rs:169:10
        │
        ╰─▶ root error
            ╰╴ tests/common/mod.rs:4:5
